--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
    <h6 class="text-header">
     Packages
    </h6>
+   <a class="card" href="pylab-sources/">
+    pyLab-sources
+    <span>
+    </span>
+    <span class="version">
+     0.6.3
+    </span>
+    <br/>
+    <span class="description">
+     sources
+    </span>
+   </a>
    <a class="card" href="sources/">
     sources
     <span>
