--- a/pylab-sources/index.html
+++ b/pylab-sources/index.html
@@ -1,2 +1,3 @@
+<!DOCTYPE html><html><body>
 <a href="git+https://github.com/electricjesster/pyLabSources@v0.6.9#egg=pylab-sources-0.6.9.tar.gz">0.6.9.tar.gz</a><br/>
 </body></html>
