--- a/pylab-sources/index.html
+++ b/pylab-sources/index.html
@@ -82,6 +82,11 @@
         0.6.12.dev0+gd74f9b94d.d20251110.tar.gz
        </a>
       </div>
+      <div class="prerelease" id="0.6.13.dev0+g581ef6ac8.d20251110.tar.gz" onclick="load_readme('0.6.13.dev0+g581ef6ac8.d20251110.tar.gz', scroll_to_div=true);">
+       <a href="git+https://github.com/electricjesster/pyLabSources@0.6.13.dev0+g581ef6ac8.d20251110.tar.gz#egg=pylab-sources-0.6.13.dev0+g581ef6ac8.d20251110.tar.gz">
+        0.6.13.dev0+g581ef6ac8.d20251110.tar.gz
+       </a>
+      </div>
      </section>
     </div>
     <div class="nine columns" id="description_pkg">
