:package: [:robot:] Update package in PyPi index

--- a/pylab-sources/index.html
+++ b/pylab-sources/index.html
@@ -102,6 +102,11 @@
         0.6.31.dev0+g828b9e0d8.d20251110.tar.gz
        </a>
       </div>
+      <div class="prerelease" id="0.6.41.dev0+gad551e563.d20251110" onclick="load_readme('0.6.41.dev0+gad551e563.d20251110', scroll_to_div=true);">
+       <a href="git+https://github.com/electricjesster/pyLabSources@0.6.41.dev0+gad551e563.d20251110#egg=pylab-sources-0.6.41.dev0+gad551e563.d20251110">
+        0.6.41.dev0+gad551e563.d20251110
+       </a>
+      </div>
      </section>
     </div>
     <div class="nine columns" id="description_pkg">
