--- a/pylab-sources/index.html
+++ b/pylab-sources/index.html
@@ -102,6 +102,11 @@
         0.6.31.dev0+g828b9e0d8.d20251110.tar.gz
        </a>
       </div>
+      <div class="prerelease" id="0.6.46.dev0+g560571747.d20251110.tar.gz" onclick="load_readme('0.6.46.dev0+g560571747.d20251110.tar.gz', scroll_to_div=true);">
+       <a href="git+https://github.com/electricjesster/pyLabSources@0.6.46.dev0+g560571747.d20251110.tar.gz#egg=pylab-sources-0.6.46.dev0+g560571747.d20251110.tar.gz">
+        0.6.46.dev0+g560571747.d20251110.tar.gz
+       </a>
+      </div>
      </section>
     </div>
     <div class="nine columns" id="description_pkg">
