:package: [:robot:] Update package in PyPi index

--- a/pylab-sources/index.html
+++ b/pylab-sources/index.html
@@ -107,6 +107,11 @@
         0.6.50.tar.gz
        </a>
       </div>
+      <div class="prerelease" id="0.6.55.tar.gz" onclick="load_readme('0.6.55.tar.gz', scroll_to_div=true);">
+       <a href="git+https://github.com/electricjesster/pyLabSources@0.6.55.tar.gz#egg=pylab-sources-0.6.55.tar.gz">
+        0.6.55.tar.gz
+       </a>
+      </div>
      </section>
     </div>
     <div class="nine columns" id="description_pkg">
