:package: [:robot:] Update package in PyPi index

--- a/pylab-sources/index.html
+++ b/pylab-sources/index.html
@@ -42,10 +42,10 @@
     <span>
     </span>
     <span class="version" id="latest-version">
-     v0.0.1
+     0.6.65
     </span>
     <span hidden="" id="latest-main-version">
-     v0.0.1
+     0.6.65
     </span>
    </section>
    <pre hidden="" id="installdanger">
@@ -110,6 +110,11 @@
       <div class="prerelease" id="0.6.55.tar.gz" onclick="load_readme('0.6.55.tar.gz', scroll_to_div=true);">
        <a href="git+https://github.com/electricjesster/pyLabSources@0.6.55.tar.gz#egg=pylab-sources-0.6.55.tar.gz">
         0.6.55.tar.gz
+       </a>
+      </div>
+      <div class="" id="0.6.65" onclick="load_readme('0.6.65', scroll_to_div=true);">
+       <a href="git+https://github.com/electricjesster/pyLabSources@0.6.65#egg=pylab-sources-0.6.65">
+        0.6.65
        </a>
       </div>
      </section>
