:package: [:robot:] Update package in PyPi index

--- a/pylab-sources/index.html
+++ b/pylab-sources/index.html
@@ -42,10 +42,10 @@
     <span>
     </span>
     <span class="version" id="latest-version">
-     0.6.65
+     0.6.70
     </span>
     <span hidden="" id="latest-main-version">
-     0.6.65
+     0.6.70
     </span>
    </section>
    <pre hidden="" id="installdanger">
@@ -115,6 +115,11 @@
       <div class="" id="0.6.65" onclick="load_readme('0.6.65', scroll_to_div=true);">
        <a href="git+https://github.com/electricjesster/pyLabSources@0.6.65#egg=pylab-sources-0.6.65">
         0.6.65
+       </a>
+      </div>
+      <div class="" id="0.6.70" onclick="load_readme('0.6.70', scroll_to_div=true);">
+       <a href="git+https://github.com/electricjesster/pyLabSources@0.6.70#egg=pylab-sources-0.6.70">
+        0.6.70
        </a>
       </div>
      </section>
