--- a/pylab-sources/index.html
+++ b/pylab-sources/index.html
@@ -42,10 +42,10 @@
     <span>
     </span>
     <span class="version" id="latest-version">
-     0.6.70
+     0.6.95
     </span>
     <span hidden="" id="latest-main-version">
-     0.6.70
+     0.6.95
     </span>
    </section>
    <pre hidden="" id="installdanger">
@@ -120,6 +120,11 @@
       <div class="" id="0.6.70" onclick="load_readme('0.6.70', scroll_to_div=true);">
        <a href="git+https://github.com/electricjesster/pyLabSources@0.6.70#egg=pylab-sources-0.6.70">
         0.6.70
+       </a>
+      </div>
+      <div class="" id="0.6.95" onclick="load_readme('0.6.95', scroll_to_div=true);">
+       <a href="git+https://github.com/electricjesster/pyLabSources@0.6.95#egg=pylab-sources-0.6.95">
+        0.6.95
        </a>
       </div>
      </section>
