:package: [:robot:] Update package in PyPi index

--- a/pylab-sources/index.html
+++ b/pylab-sources/index.html
@@ -127,6 +127,11 @@
         0.6.95
        </a>
       </div>
+      <div class="" id="0.6.95" onclick="load_readme('0.6.95', scroll_to_div=true);">
+       <a href="git+https://github.com/electricjesster/pyLabSources@0.6.95#egg=pylab-sources-0.6.95">
+        0.6.95
+       </a>
+      </div>
      </section>
     </div>
     <div class="nine columns" id="description_pkg">
