:package: [:robot:] Register package in PyPi index

--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
    <h6 class="text-header">
     Packages
    </h6>
+   <a class="card" href="pylab-references/">
+    pylab-references
+    <span>
+    </span>
+    <span class="version">
+     0.0.6
+    </span>
+    <br/>
+    <span class="description">
+     refs
+    </span>
+   </a>
    <a class="card" href="pylab-sources/">
     pylab-sources
     <span>
