--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
    <h6 class="text-header">
     Packages
    </h6>
+   <a class="card" href='pylab-relay-box"/'>
+    pylab-relay-box"
+    <span>
+    </span>
+    <span class="version">
+     0.0.6
+    </span>
+    <br/>
+    <span class="description">
+     relays
+    </span>
+   </a>
    <a class="card" href="pylab-references/">
     pylab-references
     <span>
@@ -55,7 +67,6 @@
      refs
     </span>
    </a>
-
    <a class="card" href="pylab-meter-comm/">
     pylab-meter-comm
     <span>
