:package: [:robot:] Register package in PyPi index

--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
    <h6 class="text-header">
     Packages
    </h6>
+   <a class="card" href="pylab-calibrate/">
+    pylab-calibrate
+    <span>
+    </span>
+    <span class="version">
+     0.0.6
+    </span>
+    <br/>
+    <span class="description">
+     cal app
+    </span>
+   </a>
    <a class="card" href='pylab-relay-box"/'>
     pylab-relay-box"
     <span>
