:package: [:robot:] Update package in PyPi index

--- a/pylab-meter-comm/index.html
+++ b/pylab-meter-comm/index.html
@@ -42,10 +42,10 @@
     <span>
     </span>
     <span class="version" id="latest-version">
-     0.0.10
+     1.0.0
     </span>
     <span hidden="" id="latest-main-version">
-     0.0.10
+     1.0.0
     </span>
    </section>
    <pre hidden="" id="installdanger">
@@ -80,6 +80,11 @@
       <div class="" id="0.0.10" onclick="load_readme('0.0.10', scroll_to_div=true);">
        <a href="git+https://github.com/electricjesster/pyLabSources@0.0.10#egg=pylab-meter-comm-0.0.10">
         0.0.10
+       </a>
+      </div>
+      <div class="" id="1.0.0" onclick="load_readme('1.0.0', scroll_to_div=true);">
+       <a href="git+https://github.com/electricjesster/pyLabSources@1.0.0#egg=pylab-meter-comm-1.0.0">
+        1.0.0
        </a>
       </div>
      </section>
