--- a/pylab-sources/index.html
+++ b/pylab-sources/index.html
@@ -42,10 +42,10 @@
     <span>
     </span>
     <span class="version" id="latest-version">
-     0.6.95
+     1.0.0
     </span>
     <span hidden="" id="latest-main-version">
-     0.6.95
+     1.0.0
     </span>
    </section>
    <pre hidden="" id="installdanger">
@@ -130,6 +130,11 @@
       <div class="" id="0.6.95" onclick="load_readme('0.6.95', scroll_to_div=true);">
        <a href="git+https://github.com/electricjesster/pyLabSources@0.6.95#egg=pylab-sources-0.6.95">
         0.6.95
+       </a>
+      </div>
+      <div class="" id="1.0.0" onclick="load_readme('1.0.0', scroll_to_div=true);">
+       <a href="git+https://github.com/electricjesster/pyLabSources@1.0.0#egg=pylab-sources-1.0.0">
+        1.0.0
        </a>
       </div>
      </section>
