--- a/pylab-relay-box/index.html
+++ b/pylab-relay-box/index.html
@@ -54,7 +54,7 @@
       </button>
     </pre>
    <pre id="installcmd">
-      <code>pip install pylab-relay-box --extra-index-url https://astariul.github.io/github-hosted-pypi/</code>
+      <code>pip install pylab-relay-box --extra-index-url https://electricjesster.github.io/PyPi_private_index/</code>
     </pre>
    <hr/>
    <div class="row">
@@ -62,7 +62,7 @@
      <b>
       Project links
      </b>
-     <button id="repoHomepage" onclick="openLinkInNewTab('https://github.com/electricjesster/pyLabSources')">
+     <button id="repoHomepage" onclick="openLinkInNewTab('https://github.com/electricjesster/pylabreferences')">
       Homepage
      </button>
      <p class="elem">
@@ -73,17 +73,17 @@
      </p>
      <section class="versions" id="versions">
       <div id="0.0.1" onclick="load_readme('0.0.1', scroll_to_div=true)">
-       <a href="git+https://github.com/electricjesster/pyLabSources@0.0.1#egg=pylab-relay-box-0.0.1">
+       <a href="git+https://github.com/electricjesster/pylabreferences@0.0.1#egg=pylab-relay-box-0.0.1">
         0.0.1
        </a>
       </div>
       <div class="" id="0.0.10" onclick="load_readme('0.0.10', scroll_to_div=true);">
-       <a href="git+https://github.com/electricjesster/pyLabSources@0.0.10#egg=pylab-relay-box-0.0.10">
+       <a href="git+https://github.com/electricjesster/pylabreferences@0.0.10#egg=pylab-relay-box-0.0.10">
         0.0.10
        </a>
       </div>
       <div class="" id="1.0.0" onclick="load_readme('1.0.0', scroll_to_div=true);">
-       <a href="git+https://github.com/electricjesster/pyLabSources@1.0.0#egg=pylab-relay-box-1.0.0">
+       <a href="git+https://github.com/electricjesster/pylabreferences@1.0.0#egg=pylab-relay-box-1.0.0">
         1.0.0
        </a>
       </div>
@@ -99,7 +99,7 @@
    </div>
   </div>
   <script>
-   var url_readme_main = 'https://raw.githubusercontent.com/electricjesster/pyLabSources/main/README.md';
+   var url_readme_main = 'https://raw.githubusercontent.com/electricjesster/pylabreferences/main/README.md';
     
     $(document).ready(function () {
       var this_vers = document.getElementById('latest-main-version').textContent.trim();
