--- a/pylab-meter-comm/index.html
+++ b/pylab-meter-comm/index.html
@@ -54,7 +54,7 @@
       </button>
     </pre>
    <pre id="installcmd">
-      <code>pip install pylab-meter-comm --extra-index-url https://astariul.github.io/github-hosted-pypi/</code>
+      <code>pip install pylab-meter-comm --extra-index-url https://electricjesster.github.io/PyPi_private_index/</code>
     </pre>
    <hr/>
    <div class="row">
