--- a/pylab-calibrate/index.html
+++ b/pylab-calibrate/index.html
@@ -59,7 +59,7 @@
     </pre>
     
     <pre id='installcmd'>
-      <code>pip install pylab-calibrate --extra-index-url https://astariul.github.io/github-hosted-pypi/</code>
+      <code>pip install pylab-calibrate --extra-index-url https://electricjesster.github.io/PyPi_private_index/</code>
     </pre>
     
     <hr />
